# theater-robot

./: .gitignore  LICENSE  README.md
Arduino/BluetoothMaster/: BluetoothMaster.ino
Arduino/BluetoothSlave/: BluetoothSlave.ino
Arduino/BluetoothTest/: BluetoothTest.ino
Arduino/RobotControllerJoystick/: RobotControllerJoystick.ino
Arduino/StageCorner/: StageCorner.ino
Arduino/ledStipTest/: ledStipTest.ino
Arduino/ledStripTestServer/: ledStripTestServer.ino
Arduino/motors_cmds/: motors_cmds.ino
Arduino/nrf24_test_client/: nrf24_test_client.ino
Arduino/nrf_broadcast/: nrf_broadcast.ino
Arturo/RobotStories/: .project  (+1 more)
Documentacion/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
Proxy/: .cproject  .project  ArduinoConnection.cpp  ArduinoConnection.h  BTesti.cpp  BluetoothConnection.cpp  BluetoothConnection.cpp~  BluetoothConnection.h  BluetoothConnection.h~  BluetoothConnections.cpp~  BluetoothManager.cpp  BluetoothManager.cpp~  BluetoothManager.h  BluetoothManager.h~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CMakeLists2.txt  MVision.cpp  MVision.cpp~  MVision.h  MVision.h~  Main.cpp  Main.cpp~  Makefile  PlayDirector.cpp  PlayDirector.h  Robot.cpp  Robot.h  RobotStory  Script.cpp  Script.h  ScriptCommand.cpp  ScriptCommand.h  Server.cpp  Server.h  Stage.cpp  Stage.cpp~  Stage.h  Stage.h~  (+8 more)
Proxy/Debug/: makefile  sources.mk  subdir.mk
RobotStories/: AndroidManifest.xml
(+126 files in other folders)
