cmake_minimum_required(VERSION 2.8)
project(RobotStory)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules" ${CMAKE_MODULE_PATH})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -pthread")
find_package( Bluetooth )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR} ${BLUETOOTH_INCLUDE_DIRS} )
add_executable( RobotStory Main.cpp BluetoothConnection.cpp MVision.cpp BluetoothManager.cpp Stage.cpp StageCorner.cpp Robot.cpp StagePoint.cpp Server.cpp PlayDirector.cpp Script.cpp ScriptCommand.cpp ArduinoConnection.cpp)
target_link_libraries( RobotStory ${OpenCV_LIBS} ${BLUETOOTH_LIBRARIES})
